# memcp-public

./: .claudeignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmark_output/: benchmark_report.md  benchmark_results.json
docs/: ADOPTION-snapshot-sync.md  ADOPTION-write-lock.md  ARCHITECTURE.md  COMPARISON.md  GRAPH.md  HOOKS.md  SEARCH.md  SPEC-content-versioning.md  SPEC-memcp_grep.md  TOOLS.md  memcp-sync-explainer.html
docs/adr/: 004-sub-agents-over-sub-llms.md  007-auto-save-hook-architecture.md  009-user-level-global-deployment.md  010-twelve-factor-configuration.md  014-rebuildable-derived-indexes.md  README.md
hooks/: auto_save_reminder.py  reset_counter.py  session_start_reindex.py
hooks/snippets/: settings.json
scripts/: install.sh  retag_kind.py  retention_sweep.py  setup-hooks.sh  snapshot-archive.sh  theme_backfill.py  uninstall.sh
src/memcp/: __init__.py  config.py  server.py
templates/: CLAUDE.md
tests/: conftest.py  test_chunker.py  test_config.py  test_context_store.py  test_embeddings.py  test_hooks.py  test_memory.py  test_project.py  test_retention.py  test_server.py
tests/benchmark/: conftest.py  test_sync_scale.py
tests/integration/: conftest.py  test_no_loss_sync_machines.py  test_reindex_cross_machine.py
tests/unit/: conftest.py  test_atomicity_p4.py  test_backlog_rec5.py  test_config.py  test_consolidation.py  test_embeddings.py  test_fileutil.py  test_fresh_pull_timeout.py  test_gc_floor.py  test_graph.py  test_grep.py  (+32 more)
(+30 files in other folders)
